// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-tree-select.vue Demo-Data 方式 1`] = `
<div>
  <div
    class="root"
    tabindex="0"
  >
    <span
      class="baseline"
    >
      b
    </span>
     
    <!---->
     
    <div
      class="text"
    >
      <span>
        
                节点 1
            
      </span>
       
      <!---->
    </div>
     
    <!---->
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      />
    </transition-stub>
  </div>
</div>
`;

exports[`u-tree-select.vue Demo-Tag 方式 1`] = `
<div
  class="root"
  tabindex="0"
>
  <span
    class="baseline"
  >
    b
  </span>
   
  <span
    class="placeholder"
  >
    
        请选择
    
  </span>
   
  <div
    class="text"
  >
    <!---->
     
    <!---->
  </div>
   
  <!---->
   
  <transition-stub
    class="popper"
    name="fade"
  >
    <div
      class="root"
      style="display: none;"
    />
  </transition-stub>
</div>
`;

exports[`u-tree-select.vue Demo-Tag 方式 2`] = `
<div>
  <div
    class="root"
    tabindex="0"
  >
    <span
      class="baseline"
    >
      b
    </span>
     
    <!---->
     
    <div
      class="text"
    >
      <span>
        
                节点 2
            
      </span>
       
      <!---->
    </div>
     
    <!---->
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      />
    </transition-stub>
  </div>
</div>
`;

exports[`u-tree-select.vue Demo-支持多选 1`] = `
<div>
  <div
    class="root"
    tabindex="0"
  >
    <span
      class="baseline"
    >
      b
    </span>
     
    <!---->
     
    <div
      class="text"
    >
      <span>
        
                节点 1
            
      </span>
       
      <!---->
    </div>
     
    <!---->
     
    <transition-stub
      class="popper"
      name="fade"
    >
      <div
        class="root"
        style="display: none;"
      />
    </transition-stub>
  </div>
</div>
`;
